T4/JanderParser.py
# Generated from Jander.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JanderParser ( Parser ):

    grammarFileName = "Jander.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "','", "'.'", "'^'", "'<-'", "'..'", 
                     "'+'", "'*'", "'/'", "'%'", "'&'", "'<>'", "'>='", 
                     "'<='", "'>'", "'<'", "'nao'", "'ou'", "'e'", "'algoritmo'", 
                     "'declare'", "'literal'", "'inteiro'", "'real'", "'logico'", 
                     "'leia'", "'escreva'", "'se'", "'fim_se'", "'entao'", 
                     "'caso'", "'seja'", "'senao'", "'fim_caso'", "'para'", 
                     "'ate'", "'faca'", "'fim_para'", "'enquanto'", "'fim_enquanto'", 
                     "'registro'", "'fim_registro'", "'tipo'", "'procedimento'", 
                     "'fim_procedimento'", "'var'", "'funcao'", "'retorne'", 
                     "'fim_funcao'", "'constante'", "'verdadeiro'", "'falso'", 
                     "'fim_algoritmo'", "'-'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "':'", "'('", "')'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ALGORITMO", "DECLARE", "LITERAL", "INTEIRO", "REAL", 
                      "LOGICO", "LEIA", "ESCREVA", "SE", "FIM_SE", "ENTAO", 
                      "CASO", "SEJA", "SENAO", "FIM_CASO", "PARA", "ATE", 
                      "FACA", "FIM_PARA", "ENQUANTO", "FIM_ENQUANTO", "REGISTRO", 
                      "FIM_REGISTRO", "TIPO", "PROCEDIMENTO", "FIM_PROCEDIMENTO", 
                      "VAR", "FUNCAO", "RETORNE", "FIM_FUNCAO", "CONSTANTE", 
                      "VERDADEIRO", "FALSO", "FIM_ALGORITMO", "SINAL", "NUM_INT", 
                      "NUM_REAL", "OP_LOGICO", "IDENT", "PONTUACAO", "CADEIA", 
                      "COMENTARIO", "WS", "OP_REL", "OP_ARIT", "DELIM", 
                      "ABREPAR", "FECHAPAR", "ABRECHAVE", "FECHACHAVE", 
                      "COMENTARIO_NAO_FECHADO", "CADEIA_NAO_FECHADA", "ERRO" ]

    RULE_programa = 0
    RULE_declaracoes = 1
    RULE_decl_local_global = 2
    RULE_declaracao_local = 3
    RULE_variavel = 4
    RULE_identificador = 5
    RULE_dimensao = 6
    RULE_tipo = 7
    RULE_registro = 8
    RULE_tipo_basico = 9
    RULE_tipo_basico_ident = 10
    RULE_tipo_estendido = 11
    RULE_valor_constante = 12
    RULE_parametro = 13
    RULE_parametros = 14
    RULE_declaracao_global = 15
    RULE_corpo = 16
    RULE_cmd = 17
    RULE_cmdLeia = 18
    RULE_cmdEscreva = 19
    RULE_cmdSe = 20
    RULE_cmdCaso = 21
    RULE_cmdPara = 22
    RULE_cmdEnquanto = 23
    RULE_cmdFaca = 24
    RULE_cmdAtribuicao = 25
    RULE_cmdChamada = 26
    RULE_cmdRetorne = 27
    RULE_selecao = 28
    RULE_item_selecao = 29
    RULE_constantes = 30
    RULE_numero_intervalo = 31
    RULE_op_unario = 32
    RULE_exp_aritmetica = 33
    RULE_termo = 34
    RULE_fator = 35
    RULE_op1 = 36
    RULE_op2 = 37
    RULE_op3 = 38
    RULE_parcela = 39
    RULE_parcela_unario = 40
    RULE_parcela_nao_unario = 41
    RULE_exp_relacional = 42
    RULE_op_relacional = 43
    RULE_expressao = 44
    RULE_termo_logico = 45
    RULE_fator_logico = 46
    RULE_parcela_logica = 47
    RULE_op_logico_1 = 48
    RULE_op_logico_2 = 49

    ruleNames =  [ "programa", "declaracoes", "decl_local_global", "declaracao_local", 
                   "variavel", "identificador", "dimensao", "tipo", "registro", 
                   "tipo_basico", "tipo_basico_ident", "tipo_estendido", 
                   "valor_constante", "parametro", "parametros", "declaracao_global", 
                   "corpo", "cmd", "cmdLeia", "cmdEscreva", "cmdSe", "cmdCaso", 
                   "cmdPara", "cmdEnquanto", "cmdFaca", "cmdAtribuicao", 
                   "cmdChamada", "cmdRetorne", "selecao", "item_selecao", 
                   "constantes", "numero_intervalo", "op_unario", "exp_aritmetica", 
                   "termo", "fator", "op1", "op2", "op3", "parcela", "parcela_unario", 
                   "parcela_nao_unario", "exp_relacional", "op_relacional", 
                   "expressao", "termo_logico", "fator_logico", "parcela_logica", 
                   "op_logico_1", "op_logico_2" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    ALGORITMO=20
    DECLARE=21
    LITERAL=22
    INTEIRO=23
    REAL=24
    LOGICO=25
    LEIA=26
    ESCREVA=27
    SE=28
    FIM_SE=29
    ENTAO=30
    CASO=31
    SEJA=32
    SENAO=33
    FIM_CASO=34
    PARA=35
    ATE=36
    FACA=37
    FIM_PARA=38
    ENQUANTO=39
    FIM_ENQUANTO=40
    REGISTRO=41
    FIM_REGISTRO=42
    TIPO=43
    PROCEDIMENTO=44
    FIM_PROCEDIMENTO=45
    VAR=46
    FUNCAO=47
    RETORNE=48
    FIM_FUNCAO=49
    CONSTANTE=50
    VERDADEIRO=51
    FALSO=52
    FIM_ALGORITMO=53
    SINAL=54
    NUM_INT=55
    NUM_REAL=56
    OP_LOGICO=57
    IDENT=58
    PONTUACAO=59
    CADEIA=60
    COMENTARIO=61
    WS=62
    OP_REL=63
    OP_ARIT=64
    DELIM=65
    ABREPAR=66
    FECHAPAR=67
    ABRECHAVE=68
    FECHACHAVE=69
    COMENTARIO_NAO_FECHADO=70
    CADEIA_NAO_FECHADA=71
    ERRO=72

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracoes(self):
            return self.getTypedRuleContext(JanderParser.DeclaracoesContext,0)


        def ALGORITMO(self):
            return self.getToken(JanderParser.ALGORITMO, 0)

        def corpo(self):
            return self.getTypedRuleContext(JanderParser.CorpoContext,0)


        def FIM_ALGORITMO(self):
            return self.getToken(JanderParser.FIM_ALGORITMO, 0)

        def EOF(self):
            return self.getToken(JanderParser.EOF, 0)

        def getRuleIndex(self):
            return JanderParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = JanderParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.declaracoes()
            self.state = 101
            self.match(JanderParser.ALGORITMO)
            self.state = 102
            self.corpo()
            self.state = 103
            self.match(JanderParser.FIM_ALGORITMO)
            self.state = 104
            self.match(JanderParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_local_global(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JanderParser.Decl_local_globalContext)
            else:
                return self.getTypedRuleContext(JanderParser.Decl_local_globalContext,i)


        def getRuleIndex(self):
            return JanderParser.RULE_declaracoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes" ):
                listener.enterDeclaracoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes" ):
                listener.exitDeclaracoes(self)




    def declaracoes(self):

        localctx = JanderParser.DeclaracoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 1293025676361728) != 0:
                self.state = 106
                self.decl_local_global()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_local_globalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_local(self):
            return self.getTypedRuleContext(JanderParser.Declaracao_localContext,0)


        def declaracao_global(self):
            return self.getTypedRuleContext(JanderParser.Declaracao_globalContext,0)


        def getRuleIndex(self):
            return JanderParser.RULE_decl_local_global

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_local_global" ):
                listener.enterDecl_local_global(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_local_global" ):
                listener.exitDecl_local_global(self)




    def decl_local_global(self):

        localctx = JanderParser.Decl_local_globalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl_local_global)
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21, 43, 50]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.declaracao_local()
                pass
            elif token in [44, 47]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.declaracao_global()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_localContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECLARE(self):
            return self.getToken(JanderParser.DECLARE, 0)

        def variavel(self):
            return self.getTypedRuleContext(JanderParser.VariavelContext,0)


        def CONSTANTE(self):
            return self.getToken(JanderParser.CONSTANTE, 0)

        def IDENT(self):
            return self.getToken(JanderParser.IDENT, 0)

        def DELIM(self):
            return self.getToken(JanderParser.DELIM, 0)

        def tipo_basico(self):
            return self.getTypedRuleContext(JanderParser.Tipo_basicoContext,0)


        def valor_constante(self):
            return self.getTypedRuleContext(JanderParser.Valor_constanteContext,0)


        def TIPO(self):
            return self.getToken(JanderParser.TIPO, 0)

        def tipo(self):
            return self.getTypedRuleContext(JanderParser.TipoContext,0)


        def getRuleIndex(self):
            return JanderParser.RULE_declaracao_local

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_local" ):
                listener.enterDeclaracao_local(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_local" ):
                listener.exitDeclaracao_local(self)




    def declaracao_local(self):

        localctx = JanderParser.Declaracao_localContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao_local)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.match(JanderParser.DECLARE)
                self.state = 117
                self.variavel()
                pass
            elif token in [50]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(JanderParser.CONSTANTE)
                self.state = 119
                self.match(JanderParser.IDENT)
                self.state = 120
                self.match(JanderParser.DELIM)
                self.state = 121
                self.tipo_basico()
                self.state = 122
                self.match(JanderParser.T__0)
                self.state = 123
                self.valor_constante()
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.match(JanderParser.TIPO)
                self.state = 126
                self.match(JanderParser.IDENT)
                self.state = 127
                self.match(JanderParser.DELIM)
                self.state = 128
                self.tipo()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JanderParser.IdentificadorContext)
            else:
                return self.getTypedRuleContext(JanderParser.IdentificadorContext,i)


        def DELIM(self):
            return self.getToken(JanderParser.DELIM, 0)

        def tipo(self):
            return self.getTypedRuleContext(JanderParser.TipoContext,0)


        def getRuleIndex(self):
            return JanderParser.RULE_variavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariavel" ):
                listener.enterVariavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariavel" ):
                listener.exitVariavel(self)




    def variavel(self):

        localctx = JanderParser.VariavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variavel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.identificador()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 132
                self.match(JanderParser.T__1)
                self.state = 133
                self.identificador()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 139
            self.match(JanderParser.DELIM)
            self.state = 140
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentificadorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(JanderParser.IDENT)
            else:
                return self.getToken(JanderParser.IDENT, i)

        def dimensao(self):
            return self.getTypedRuleContext(JanderParser.DimensaoContext,0)


        def getRuleIndex(self):
            return JanderParser.RULE_identificador

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentificador" ):
                listener.enterIdentificador(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentificador" ):
                listener.exitIdentificador(self)




    def identificador(self):

        localctx = JanderParser.IdentificadorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_identificador)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(JanderParser.IDENT)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 143
                self.match(JanderParser.T__2)
                self.state = 144
                self.match(JanderParser.IDENT)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.dimensao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ABRECHAVE(self, i:int=None):
            if i is None:
                return self.getTokens(JanderParser.ABRECHAVE)
            else:
                return self.getToken(JanderParser.ABRECHAVE, i)

        def exp_aritmetica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JanderParser.Exp_aritmeticaContext)
            else:
                return self.getTypedRuleContext(JanderParser.Exp_aritmeticaContext,i)


        def FECHACHAVE(self, i:int=None):
            if i is None:
                return self.getTokens(JanderParser.FECHACHAVE)
            else:
                return self.getToken(JanderParser.FECHACHAVE, i)

        def getRuleIndex(self):
            return JanderParser.RULE_dimensao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDimensao" ):
                listener.enterDimensao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDimensao" ):
                listener.exitDimensao(self)




    def dimensao(self):

        localctx = JanderParser.DimensaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dimensao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==68:
                self.state = 152
                self.match(JanderParser.ABRECHAVE)
                self.state = 153
                self.exp_aritmetica()
                self.state = 154
                self.match(JanderParser.FECHACHAVE)
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def registro(self):
            return self.getTypedRuleContext(JanderParser.RegistroContext,0)


        def tipo_estendido(self):
            return self.getTypedRuleContext(JanderParser.Tipo_estendidoContext,0)


        def getRuleIndex(self):
            return JanderParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = JanderParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tipo)
        try:
            self.state = 163
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [41]:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.registro()
                pass
            elif token in [4, 22, 23, 24, 25, 58]:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.tipo_estendido()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegistroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REGISTRO(self):
            return self.getToken(JanderParser.REGISTRO, 0)

        def FIM_REGISTRO(self):
            return self.getToken(JanderParser.FIM_REGISTRO, 0)

        def variavel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JanderParser.VariavelContext)
            else:
                return self.getTypedRuleContext(JanderParser.VariavelContext,i)


        def getRuleIndex(self):
            return JanderParser.RULE_registro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegistro" ):
                listener.enterRegistro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegistro" ):
                listener.exitRegistro(self)




    def registro(self):

        localctx = JanderParser.RegistroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_registro)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(JanderParser.REGISTRO)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==58:
                self.state = 166
                self.variavel()
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 172
            self.match(JanderParser.FIM_REGISTRO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_basicoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LITERAL(self):
            return self.getToken(JanderParser.LITERAL, 0)

        def INTEIRO(self):
            return self.getToken(JanderParser.INTEIRO, 0)

        def REAL(self):
            return self.getToken(JanderParser.REAL, 0)

        def LOGICO(self):
            return self.getToken(JanderParser.LOGICO, 0)

        def getRuleIndex(self):
            return JanderParser.RULE_tipo_basico

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_basico" ):
                listener.enterTipo_basico(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_basico" ):
                listener.exitTipo_basico(self)




    def tipo_basico(self):

        localctx = JanderParser.Tipo_basicoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tipo_basico)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            _la = self._input.LA(1)
            if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 62914560) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_basico_identContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_basico(self):
            return self.getTypedRuleContext(JanderParser.Tipo_basicoContext,0)


        def IDENT(self):
            return self.getToken(JanderParser.IDENT, 0)

        def getRuleIndex(self):
            return JanderParser.RULE_tipo_basico_ident

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_basico_ident" ):
                listener.enterTipo_basico_ident(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_basico_ident" ):
                listener.exitTipo_basico_ident(self)




    def tipo_basico_ident(self):

        localctx = JanderParser.Tipo_basico_identContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tipo_basico_ident)
        try:
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22, 23, 24, 25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.tipo_basico()
                pass
            elif token in [58]:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.match(JanderParser.IDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_estendidoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_basico_ident(self):
            return self.getTypedRuleContext(JanderParser.Tipo_basico_identContext,0)


        def getRuleIndex(self):
            return JanderParser.RULE_tipo_estendido

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_estendido" ):
                listener.enterTipo_estendido(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_estendido" ):
                listener.exitTipo_estendido(self)




    def tipo_estendido(self):

        localctx = JanderParser.Tipo_estendidoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_tipo_estendido)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 180
                self.match(JanderParser.T__3)

